Clean tests + Add Dockerfile